# fileloft

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  release-plz.toml
.github/workflows/: ci.yml  docs.yml  release-plz.yml
crates/fileloft-actix/: CHANGELOG.md  Cargo.toml
crates/fileloft-actix/src/: scope.rs
crates/fileloft-axum/: CHANGELOG.md  Cargo.toml
crates/fileloft-axum/src/: lib.rs  router.rs
crates/fileloft-core/: CHANGELOG.md  Cargo.toml
crates/fileloft-core/src/: checksum.rs  config.rs  error.rs  info.rs  lib.rs  lock.rs  proto.rs  store.rs  util.rs
crates/fileloft-core/src/handler/: get.rs  head.rs  mod.rs  options.rs  patch.rs  post.rs
crates/fileloft-core/tests/: helpers.rs  test_concatenation.rs  test_delete.rs  test_head.rs  test_patch.rs  test_post.rs
crates/fileloft-e2e-uppy/: Cargo.toml  README.md  build.rs  e2e-entry.mjs  package-lock.json  package.json
crates/fileloft-e2e-uppy/scripts/: build-assets.mjs
crates/fileloft-e2e-uppy/src/: lib.rs  main.rs
crates/fileloft-e2e-uppy/static/: index.html
crates/fileloft-e2e-uppy/test_fixtures/: hello.txt
crates/fileloft-e2e-uppy/tests/: e2e.rs
crates/fileloft-integration-tests/: Cargo.toml
crates/fileloft-integration-tests/tests/: helpers.rs  test_concatenation.rs  test_cors.rs  test_expiration.rs  test_extensions.rs  test_get.rs  test_head.rs  test_hooks.rs  test_options.rs  test_patch.rs  test_post.rs
crates/fileloft-rocket/: CHANGELOG.md  Cargo.toml
crates/fileloft-rocket/src/: routes.rs
crates/fileloft-server/: Cargo.toml
crates/fileloft-server/src/: main.rs
crates/fileloft-store-azure/: CHANGELOG.md  Cargo.toml
crates/fileloft-store-azure/src/: error.rs  lib.rs  store.rs
crates/fileloft-store-fs/: CHANGELOG.md  Cargo.toml
crates/fileloft-store-fs/src/: locker.rs  store.rs
crates/fileloft-store-gcs/: CHANGELOG.md  Cargo.toml
crates/fileloft-store-gcs/src/: error.rs  lib.rs  store.rs
crates/fileloft-store-memory/: CHANGELOG.md  Cargo.toml
crates/fileloft-store-memory/src/: lib.rs  locker.rs  store.rs
crates/fileloft-store-s3/: CHANGELOG.md  Cargo.toml
crates/fileloft-store-s3/src/: error.rs  lib.rs  store.rs
crates/tus-actix/: Cargo.toml
crates/tus-actix/src/: lib.rs  scope.rs
crates/tus-axum/: Cargo.toml
crates/tus-axum/src/: router.rs
crates/tus-core/: Cargo.toml
crates/tus-core/src/: checksum.rs  config.rs  error.rs  hooks.rs  lib.rs  lock.rs  proto.rs  store.rs  util.rs
crates/tus-core/src/handler/: delete.rs  head.rs  mod.rs  options.rs  patch.rs  post.rs
crates/tus-core/tests/: helpers.rs  test_concatenation.rs  test_delete.rs  test_expiration.rs  test_head.rs  test_hooks.rs  test_options.rs  test_patch.rs  test_post.rs
crates/tus-rocket/: Cargo.toml
crates/tus-rocket/src/: lib.rs  routes.rs
crates/tus-store-fs/: Cargo.toml
crates/tus-store-fs/src/: lib.rs  locker.rs  store.rs
crates/tus-store-memory/: Cargo.toml
crates/tus-store-memory/src/: locker.rs  store.rs
docs-site/: .gitignore  README.md  hugo.toml
docs-site/assets/css/: main.css
docs-site/content/: _index.md
docs-site/content/sections/: 1-overview.md  2-library.md  3-binary.md
docs-site/layouts/: index.html
docs-site/layouts/_default/: baseof.html  list.html  single.html
docs-site/layouts/partials/: footer.html  header.html
docs-site/layouts/shortcodes/: prop.html  props.html
scripts/: run-e2e-tests.sh
