[workspace]
resolver = "2"
members = [
    "crates/fileloft-core",
    "crates/fileloft-store-memory",
    "crates/fileloft-store-fs",
    "crates/fileloft-axum",
    "crates/fileloft-actix",
    "crates/fileloft-rocket",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Internal
fileloft-core         = { path = "crates/fileloft-core" }
fileloft-store-memory = { path = "crates/fileloft-store-memory" }
fileloft-store-fs     = { path = "crates/fileloft-store-fs" }

# Async
tokio        = { version = "1.51", features = ["full"] }
tokio-util   = { version = "0.7", features = ["io"] }
futures      = "0.3"
futures-util = "0.3"

# HTTP
http           = "1.4"
http-body      = "1.0"
http-body-util = "0.1"
bytes          = "1.11"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors
thiserror = "2.0"

# IDs
uuid = { version = "1.23", features = ["v4"] }

# Crypto (RustCrypto family, all share digest = "0.11")
digest = "0.11"
sha1   = "0.11"
sha2   = "0.11"
md-5   = "0.11"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Trait helpers
trait-variant = "0.1"

# Tracing
tracing = "0.1"

# FS locking
fs4 = "0.13"

# Framework integrations
axum      = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
actix-web = "4"
rocket    = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"
