[workspace]
resolver = "2"
members = [
    "crates/fileloft-core",
    "crates/fileloft-store-memory",
    "crates/fileloft-store-fs",
    "crates/fileloft-store-gcs",
    "crates/fileloft-store-s3",
    "crates/fileloft-store-azure",
    "crates/fileloft-axum",
    "crates/fileloft-actix",
    "crates/fileloft-rocket",
    "crates/fileloft-integration-tests",
    "crates/fileloft-e2e-uppy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/sound-systems/fileloft"
homepage = "https://github.com/sound-systems/fileloft"
readme = "README.md"
keywords = ["tus", "upload", "resumable", "http", "async"]
categories = ["network-programming", "web-programming"]

[workspace.dependencies]
# Internal (version must track [workspace.package].version for `cargo publish`)
fileloft-core         = { path = "crates/fileloft-core", version = "0.1.0" }
fileloft-store-memory = { path = "crates/fileloft-store-memory", version = "0.1.0" }
fileloft-store-fs     = { path = "crates/fileloft-store-fs", version = "0.1.0" }
fileloft-store-gcs    = { path = "crates/fileloft-store-gcs", version = "0.1.0" }
fileloft-store-s3     = { path = "crates/fileloft-store-s3", version = "0.1.0" }
fileloft-store-azure  = { path = "crates/fileloft-store-azure", version = "0.1.0" }
fileloft-axum         = { path = "crates/fileloft-axum", version = "0.1.0" }
fileloft-actix        = { path = "crates/fileloft-actix", version = "0.1.0" }
fileloft-rocket       = { path = "crates/fileloft-rocket", version = "0.1.0" }

# Async
tokio        = { version = "1.51", features = ["full"] }
tokio-util   = { version = "0.7", features = ["io"] }
futures      = "0.3"
futures-util = "0.3"

# HTTP
http           = "1.4"
http-body      = "1.0"
http-body-util = "0.1"
bytes          = "1.11"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors
thiserror = "2.0"

# IDs
uuid = { version = "1.23", features = ["v4"] }

# Crypto (RustCrypto family, all share digest = "0.11")
digest = "0.11"
sha1   = "0.11"
sha2   = "0.11"
md-5   = "0.11"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Trait helpers
trait-variant = "0.1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# E2E / HTTP client
fantoccini = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"

# FS locking
fs4 = "0.13"

# Cloud storage
google-cloud-storage = "1.9"
aws-config                = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3                = "1.127"
aws-smithy-types          = "1.4"
azure_core           = "0.21"
azure_identity       = "0.21"
azure_storage        = "0.21"
azure_storage_blobs  = "0.21"

# Framework integrations
axum      = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
actix-web = "4"
rocket    = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"
