[package]
name        = "fileloft-actix"
description = "actix-web integration for the tus.io resumable upload protocol"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true

[dependencies]
fileloft-core.workspace   = true
actix-web.workspace  = true
http.workspace       = true
tokio.workspace      = true
tokio-util.workspace = true
bytes.workspace      = true
futures-util.workspace = true

[dev-dependencies]
fileloft-store-memory.workspace = true
tokio = { workspace = true, features = ["test-util"] }
