[package]
name        = "fileloft-axum"
description = "axum integration for the tus.io resumable upload protocol"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
readme.workspace      = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true
documentation = "https://docs.rs/fileloft-axum"

[dependencies]
fileloft-core.workspace     = true
axum.workspace         = true
tokio.workspace        = true
tokio-util.workspace   = true
http.workspace         = true
http-body-util.workspace = true
bytes.workspace        = true
futures-util.workspace = true

[dev-dependencies]
fileloft-store-memory.workspace = true
tokio = { workspace = true, features = ["test-util"] }
