[package]
name        = "fileloft-core"
description = "Framework-agnostic core for the tus.io resumable upload protocol"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
readme.workspace      = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true
documentation = "https://docs.rs/fileloft-core"

[dependencies]
tokio.workspace      = true
tokio-util.workspace = true
bytes.workspace      = true
http.workspace       = true
futures.workspace    = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
uuid.workspace       = true
digest.workspace     = true
sha1.workspace       = true
sha2.workspace       = true
md-5.workspace       = true
base64.workspace     = true
chrono.workspace     = true
trait-variant.workspace = true
tracing.workspace    = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
