[package]
name        = "fileloft-store-fs"
description = "Filesystem tus.io storage backend and file locker"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
readme.workspace      = true
repository.workspace  = true
homepage.workspace    = true
keywords.workspace    = true
categories.workspace  = true
documentation = "https://docs.rs/fileloft-store-fs"

[dependencies]
fileloft-core.workspace   = true
tokio.workspace      = true
bytes.workspace      = true
serde_json.workspace = true
serde.workspace      = true
fs4.workspace        = true
tracing.workspace    = true

[dev-dependencies]
tokio    = { workspace = true, features = ["test-util"] }
tempfile = "3"
