[package]
name        = "fileloft-store-memory"
description = "In-memory tus.io storage backend and locker for testing"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true

[dependencies]
fileloft-core.workspace   = true
tokio.workspace      = true
bytes.workspace      = true
tracing.workspace    = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
