[package]
name        = "fileloft-store-s3"
description = "Amazon S3 / S3-compatible storage backend for the tus.io resumable upload protocol"
version.workspace      = true
edition.workspace    = true
license.workspace    = true
rust-version.workspace = true
readme.workspace     = true
repository.workspace = true
homepage.workspace   = true
keywords.workspace   = true
categories.workspace = true
documentation = "https://docs.rs/fileloft-store-s3"

[dependencies]
fileloft-core.workspace = true
tokio.workspace         = true
bytes.workspace         = true
serde_json.workspace    = true
serde.workspace         = true
tracing.workspace       = true
thiserror.workspace     = true
aws-config               = { workspace = true }
aws-sdk-s3               = { workspace = true }
aws-smithy-types         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
