[package]
name        = "tus-rocket"
description = "Rocket integration for the tus.io resumable upload protocol"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true

[dependencies]
tus-core.workspace = true
rocket.workspace   = true
http.workspace     = true
tokio.workspace    = true
bytes.workspace    = true

[dev-dependencies]
tus-store-memory.workspace = true
tokio = { workspace = true, features = ["test-util"] }
