[package]
name        = "tus-store-fs"
description = "Filesystem tus.io storage backend and file locker"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true

[dependencies]
tus-core.workspace   = true
tokio.workspace      = true
bytes.workspace      = true
serde_json.workspace = true
fs4.workspace        = true
tracing.workspace    = true

[dev-dependencies]
tokio    = { workspace = true, features = ["test-util"] }
tempfile = "3"
